# Chess-TUI

./: .gitignore  404.html  Dockerfile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: CI-CD.yml  CI.yml
Guida configurazione repo/: index.html
ISPIRATORE/: index.html
backups/: CI-CD.yml.bak
chess/: __main__.py  board.py  constants.py  game.py  main.py  pieces.py  ui.py  utils.py
docs/: Guida configurazione repo.md  ISPIRATORE.md
docs/source/: conf.py  index.rst
docs/source/api/: chess.rst  modules.rst
scacchi/: main.py
tests/: test_main.py
