[project]
name = "scacchi"
version = "0.1.0"
description = "Implementazione del gioco degli scacchi a linea di comando"
readme = "README.md"
requires-python = ">=3.11.10"
dependencies = [
    "rich>=13.9.4",
]

[dependency-groups]
dev = [
    "bandit>=1.8.3",
    "mypy>=1.15.0",
    "pytest-cov>=6.0.0",
    "pytest>=8.3.5",
    "ruff>=0.11.0",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocstrings[python]>=0.29.0",
]
